fix vux升级到2.9后官方 把 vux-tab-warp 改成 vux-tab-wrap 后导致 tab-icon 失效

--- a/src/assets/common.styl
+++ b/src/assets/common.styl
@@ -18,7 +18,7 @@ body {
 .weui-tabbar__icon {
   width 30px !important
 }
-.vux-tab-warp.tab-icon {
+.vux-tab-wrap.tab-icon {
   padding-top 60px
   .vux-tab-container {
     height 60px
